POS002: Add Role and Store controllers to get the data.

--- a/backend/kotlin/localpos-user-service-kt/src/main/resources/i18n/messages_es.properties
+++ b/backend/kotlin/localpos-user-service-kt/src/main/resources/i18n/messages_es.properties
@@ -1,18 +1,16 @@
 # Stores
 store.not_found=La tienda especificada no existe.
-
 # Roles
 roles.invalid=Los roles especificados son inválidos.
 roles.missing=Faltan roles: {0}
-
 # Users
 user.not_found=Usuario no encontrado.
 user.username.exists=El nombre de usuario ya existe.
 user.email.exists=El correo electrónico ya existe.
 user.password.strong=La contraseña debe tener al menos 8 caracteres e incluir mayúscula, minúscula, número y carácter especial.
-
 # Validation
 user.username.not_blank=El nombre de usuario no debe estar vacío.
+user.password.not_blank=La contraseña de usuario no debe estar vacío.
 user.email.invalid=Formato de correo inválido.
 user.storeCode.not_blank=El código de tienda no debe estar vacío.
 user.roleNames.not_empty=Se debe especificar al menos un rol.
