POS002: Add new User attributes

--- a/backend/kotlin/localpos-user-service-kt/src/main/resources/i18n/messages_en.properties
+++ b/backend/kotlin/localpos-user-service-kt/src/main/resources/i18n/messages_en.properties
@@ -14,3 +14,10 @@ user.password.not_blank=Password must not be blank.
 user.email.invalid=Invalid email format.
 user.storeCode.not_blank=Store code must not be blank.
 user.roleNames.not_empty=At least one role must be specified.
+user.firstName.not_blank=First name must not be blank.
+user.firstName.size=First name must be at most 100 characters long.
+user.lastName.not_blank=Last name must not be blank.
+user.lastName.size=Last name must be at most 100 characters long.
+user.phone.size=Phone number must be at most 20 characters long.
+user.address.size=Address must be at most 255 characters long.
+user.isActive.not_null=Active status must be specified.
