--- a/backend/kotlin/localpos-user-service-kt/src/main/resources/i18n/messages_es.properties
+++ b/backend/kotlin/localpos-user-service-kt/src/main/resources/i18n/messages_es.properties
@@ -14,3 +14,10 @@ user.password.not_blank=La contraseña de usuario no debe estar vacío.
 user.email.invalid=Formato de correo inválido.
 user.storeCode.not_blank=El código de tienda no debe estar vacío.
 user.roleNames.not_empty=Se debe especificar al menos un rol.
+user.firstName.not_blank=El nombre no debe estar vacío.
+user.firstName.size=El nombre debe tener como máximo 100 caracteres.
+user.lastName.not_blank=El apellido no debe estar vacío.
+user.lastName.size=El apellido debe tener como máximo 100 caracteres.
+user.phone.size=El teléfono debe tener como máximo 20 caracteres.
+user.address.size=La dirección debe tener como máximo 255 caracteres.
+user.isActive.not_null=Debe especificar el estatus activo.
