POS002: Refactor to fix users bugs

--- a/backend/java/localpos-user-service/src/main/resources/i18n/messages_en.properties
+++ b/backend/java/localpos-user-service/src/main/resources/i18n/messages_en.properties
@@ -1,18 +1,23 @@
 # Stores
 store.not_found=The specified store does not exist.
-
 # Roles
 roles.invalid=The specified roles are invalid.
 roles.missing=Missing roles: {0}
-
 # Users
 user.not_found=User not found.
 user.username.exists=Username already exists.
 user.email.exists=Email already exists.
 user.password.strong=Password must be at least 8 characters and include uppercase, lowercase, number and special character.
-
 # Validation
 user.username.not_blank=Username must not be blank.
+user.password.not_blank=Password must not be blank.
 user.email.invalid=Invalid email format.
 user.storeCode.not_blank=Store code must not be blank.
 user.roleNames.not_empty=At least one role must be specified.
+user.firstName.not_blank=First name must not be blank.
+user.firstName.size=First name must be at most 100 characters long.
+user.lastName.not_blank=Last name must not be blank.
+user.lastName.size=Last name must be at most 100 characters long.
+user.phone.size=Phone number must be at most 20 characters long.
+user.address.size=Address must be at most 255 characters long.
+user.isActive.not_null=Active status must be specified.
