--- a/backend/java/localpos-user-service/src/main/resources/i18n/messages_es.properties
+++ b/backend/java/localpos-user-service/src/main/resources/i18n/messages_es.properties
@@ -1,18 +1,23 @@
 # Stores
 store.not_found=La tienda especificada no existe.
-
 # Roles
 roles.invalid=Los roles especificados son inválidos.
 roles.missing=Faltan roles: {0}
-
 # Users
 user.not_found=Usuario no encontrado.
 user.username.exists=El nombre de usuario ya existe.
 user.email.exists=El correo electrónico ya existe.
 user.password.strong=La contraseña debe tener al menos 8 caracteres e incluir mayúscula, minúscula, número y carácter especial.
-
 # Validation
 user.username.not_blank=El nombre de usuario no debe estar vacío.
+user.password.not_blank=La contraseña de usuario no debe estar vacío.
 user.email.invalid=Formato de correo inválido.
 user.storeCode.not_blank=El código de tienda no debe estar vacío.
 user.roleNames.not_empty=Se debe especificar al menos un rol.
+user.firstName.not_blank=El nombre no debe estar vacío.
+user.firstName.size=El nombre debe tener como máximo 100 caracteres.
+user.lastName.not_blank=El apellido no debe estar vacío.
+user.lastName.size=El apellido debe tener como máximo 100 caracteres.
+user.phone.size=El teléfono debe tener como máximo 20 caracteres.
+user.address.size=La dirección debe tener como máximo 255 caracteres.
+user.isActive.not_null=Debe especificar el estatus activo.
